# serde-persistent-deserializer

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: de.rs  lib.rs  ser.rs
