[package]
name = "serde-persistent-deserializer"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
description = "A wrapper for persistent Serde deserializers"
repository = "https://github.com/fjarri/serde-persistent-deserializer"
readme = "README.md"
categories = ["no-std", "encoding"]
rust-version = "1.31.0"

[dependencies]
serde = { version = "1", default-features = false }

[dev-dependencies]

[features]
alloc = ["serde/alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
