[package]
name = "serde-persistent-deserializer"
version = "0.3.0"
edition = "2018"
license = "MIT"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
description = "A wrapper for persistent Serde deserializers"
repository = "https://github.com/fjarri/serde-persistent-deserializer"
readme = "README.md"
categories = ["no-std", "encoding"]
rust-version = "1.75.0"

[lib]
# Temporarily disabled until I figure out how to write a doctest that won't span five pages.
doctest = false

[dependencies]
serde = { version = "1", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
